add h1 to section

--- a/students/yeremenko_denys/02_html/cats.html
+++ b/students/yeremenko_denys/02_html/cats.html
@@ -9,16 +9,23 @@
 
 <body>
     <header>
-        <h1>Мои котики</h1>
+        <nav>
+            <ul>
+                <li><a href="work.html">Моя работа</a></li>
+                <li><a href="hobby.html">Мои увлечения</a></li>
+                <li><a href="cats.html">Мои котики</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
+            <h1>Мои котики</h1>
             <p>Своих Котиков у меня нет, поэтому я знакомлюсь с уличными. И считаю их своими.</p>
             <p>Предлагаю и Вам с ними познакомится. Итак начнем...</p>
         </section>
 
         <section>
-            <h3 id="r1">Кошечка из Румынии - Фортуна</h3>
+            <h2 id="r1">Кошечка из Румынии - Фортуна</h2>
             <p>Я ее так назавал потому что я встретил ее зимой и ей повезло, так как я начал ее кормить. Конечно же в
                 тот же момент, я стал ее <b>ЛУЧШИМ</b> другом.</p>
             <img src="images/fortyna001__500.jpg" alt="Фортуна">
@@ -28,7 +35,7 @@
             <img src="images/fortyna002.jpg" alt="Фортуна в горшке">
         </section>
         <section>
-            <h3 id="m1">Мелитопольские котики</h3>
+            <h2 id="m1">Мелитопольские котики</h2>
             <p>
                 Знакомьтесь, два брата, Симба и Баста.
             </p>
