--- a/students/yeremenko_denys/02_html/hobby.html
+++ b/students/yeremenko_denys/02_html/hobby.html
@@ -10,18 +10,25 @@
 <body>
 
     <header>
-        <h1>Мои увлечения</h1>
+        <nav>
+            <ul>
+                <li><a href="work.html">Моя работа</a></li>
+                <li><a href="hobby.html">Мои увлечения</a></li>
+                <li><a href="cats.html">Мои котики</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
         <section>
+            <h1>Мои увлечения</h1>
             <p>У меня много увлечений. Я люблю путешествовать, особенно к морю. Я обожаю море. Люблю физические игры,
                 такие как фубол и настольный теннис (хотя и очень давно не играл). Люблю различные игры, компьютерные,
                 настольные и т.д.</p>
             <p>Так как увлечений много хочу рассказать более детально о некоторых из них…</p>
         </section>
-    </header>
-
-    <main>
         <section>
-            <h3>Мотоциклы</h3>
+            <h2>Мотоциклы</h2>
             <p>Мой мотоцикл – это Ямаха дракстар. Я назвал его Буцефал. Но так как это долго выговаривать и звучит
                 немного пафосно – то я называл его просто Буци.</p>
             <p>Вместе мы исколесили округу Мелитополя, посещали байкерские тусовки и собрания. Ну и конечно же просто
@@ -31,7 +38,7 @@
             <img src="images/bysy.jpg" alt="Буци">
         </section>
         <section>
-            <h3>Настольные игры</h3>
+            <h2>Настольные игры</h2>
             <p>Настольные игры я обожал в детстве. Мы часто, в детстве, с папой, а потом с друзьями играли в любые
                 настольные игры, которые были в наличии. Даже сами придумывали, рисовали, а потом играли в эти
                 настольные игры.</p>
