--- a/students/yeremenko_denys/02_html/work.html
+++ b/students/yeremenko_denys/02_html/work.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Моя работа</title>
 </head>
 
 <body>
     <header>
-
+        <nav>
+            <ul>
+                <li><a href="work.html">Моя работа</a></li>
+                <li><a href="hobby.html">Мои увлечения</a></li>
+                <li><a href="cats.html">Мои котики</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
+            <h1>Моя работа</h1>
             <p>Закончил Таврическую государственную агротехническую академию в 1999 году, специальность - "Экономика
                 предприятия", экономист</p>
             <p>Я работаю в Таврическом государственном агротехническом университете имени Дмитра Моторного.</p>
