--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -15,7 +15,6 @@
         p {
             text-align: center;
             font-size: 18px;
-            font-weight: 400;
         }
 
         h1 {
@@ -32,14 +31,12 @@
         nav {
             color: #828282;
             font-size: 18px;
-            font-weight: 400;
         }
 
         .skills_signature {
             color: #828282;
             text-align: center;
             font-size: 14px;
-            font-weight: 400;
         }
 
         .button {
@@ -68,7 +65,7 @@
     </header>
     <main>
         <h1>Denis Novik</h1>
-        <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
+        <img src="images/hero.jpg" width="944" height="387" alt="Denis Novik">
         <div>
             <h2 id="about">About me</h2>
             <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.
@@ -82,67 +79,67 @@
             <h2 id="skills">Skills</h2>
             <p>I work in such programs as</p>
             <div>
-                <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
+                <img src="images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
                 <p class="skills_signature">Adobe<br>Photoshop</p>
                 <div>
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star"
                         style="display: inline-block; margin-right: 9px">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star"
                         style="display: inline-block; margin-right: 9px">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star"
                         style="display: inline-block; margin-right: 9px">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star"
                         style="display: inline-block; margin-right: 9px">
-                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star"
+                    <img src="images/star_empty.svg" width="26" height="26" alt="empty star"
                         style="display: inline-block">
                 </div>
             </div>
             <div>
-                <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
+                <img src="images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
                 <p class="skills_signature">Adobe<br>Illustrator</p>
                 <div>
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
-                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
             <div>
-                <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+                <img src="images/ae.svg" width="89" height="88" alt="Adobe After Effects">
                 <p class="skills_signature">Adobe<br>After Effects</p>
                 <div>
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
             <div>
-                <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma">
+                <img src="images/figma.svg" width="58" height="88" alt="Figma">
                 <p class="skills_signature">Figma</p>
                 <div>
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
         </section>
         <section>
             <h2 id="portfolio">Portfolio</h2>
             <div>
-                <img src="./ras_images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
+                <img src="images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
                 <p><a href="#" target="_blank">Online fashion store -<br>Homepage</a></p>
             </div>
             <div>
-                <img src="./ras_images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
+                <img src="images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
                 <p><a href="#" target="_blank">Reebok Store - Concept</a></p>
             </div>
             <div>
-                <img src="./ras_images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
+                <img src="images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
                 <p><a href="#" target="_blank">Braun Landing Page - Concept</a></p>
             </div>
         </section>
@@ -154,20 +151,20 @@
         <div>
             <ul>
                 <li>
-                    <a href="#"><img src="./vec_images/link.svg" width="40" height="40" alt="linkedin"></a>
+                    <a href="#"><img src="images/link.svg" width="40" height="40" alt="linkedin"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./vec_images/insta.svg" width="40" height="40" alt="instagram"></a>
+                    <a href="#"><img src="images/insta.svg" width="40" height="40" alt="instagram"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./vec_images/behance.svg" width="40" height="40" alt="behence"></a>
+                    <a href="#"><img src="images/behance.svg" width="40" height="40" alt="behence"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./vec_images/surface.svg" width="40" height="40" alt="linkedin"></a>
+                    <a href="#"><img src="images/surface.svg" width="40" height="40" alt="linkedin"></a>
                 </li>
             </ul>
         </div>
-        <p style="color: #828282; text-align: center; font-size: 14px; font-weight: 400;">
+        <p style="color: #828282; text-align: center; font-size: 14px;">
             Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
