--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -8,13 +8,14 @@
     <title>Denis Novik</title>
     <style>
         body {
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
+            font-family: 'Open Sans', Arial, Helvetica, sans-serif;
             color: #070707;
         }
 
         p {
             text-align: center;
             font-size: 18px;
+            font-weight: 400;
         }
 
         h1 {
@@ -164,7 +165,7 @@
                 </li>
             </ul>
         </div>
-        <p style="color: #828282; text-align: center; font-size: 14px;">
+        <p style="color: #828282; text-align: center; font-size: 14px; font-weight: 400;">
             Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
