images_names_changed

--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -48,7 +48,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="images/PS_icon.svg" alt="">
+                        <img src="images/ps_icon.svg" alt="">
                         <figcaption>Adobe Photoshop</figcaption>
                     </figure>
                     <div>
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/AI_icon.svg" alt="">
+                        <img src="images/ai_icon.svg" alt="">
                         <figcaption>Adobe Illustrator</figcaption>
                     </figure>
                     <div>
@@ -75,7 +75,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/AE_icon.svg" alt="">
+                        <img src="images/ae_icon.svg" alt="">
                         <figcaption>Adobe After Effects</figcaption>
                     </figure>
                     <div>
@@ -88,7 +88,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/Figma_icon.svg" alt="">
+                        <img src="images/figma_icon.svg" alt="">
                         <figcaption>Figma</figcaption>
                     </figure>
                     <div>
