lower_line_in_header_changed

--- a/students/savchak_marharyta/07_figma/index.html
+++ b/students/savchak_marharyta/07_figma/index.html
@@ -9,16 +9,17 @@
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About me</li>
-                <li>Skills</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
-            </ul>
-        </nav>
-        <img src="images/Vector.svg" alt="">
+        <div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About me</li>
+                    <li>Skills</li>
+                    <li>Portfolio</li>
+                    <li>Contacts</li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section>
