--- a/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="hero_block">
             <h1>Denis Novik</h1>
-            <img class="hero_image" src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
+            <img class="hero_image" src="images/hero.jpg" width="944" height="387" alt="Denis Novik">
         </section>
 
         <section class="about_me_container">
@@ -48,47 +48,47 @@
             <h2 class="skills_header">Skills</h2>
             <p class="skills_description">I work in such programs as</p>
             <div class="skills_item1">
-                <img class="adobe_images" src="./images/ps.svg" alt="Adobe Photoshop">
+                <img class="adobe_images" src="images/ps.svg" alt="Adobe Photoshop">
                 <p class="skills_signature">Adobe<br>Photoshop</p>
                 <div>
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_empty.svg" alt="empty star" class="last_star">
                 </div>
             </div>
             <div class="skills_item2">
-                <img class="adobe_images" src="./images/ai.svg" alt="Adobe Illustrator">
+                <img class="adobe_images" src="images/ai.svg" alt="Adobe Illustrator">
                 <p class="skills_signature">Adobe<br>Illustrator</p>
                 <div>
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_empty.svg" alt="empty star" class="stars">
-                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_empty.svg" alt="empty star" class="stars">
+                    <img src="images/star_empty.svg" alt="empty star" class="last_star">
                 </div>
             </div>
             <div class="skills_item2">
-                <img class="adobe_images" src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+                <img class="adobe_images" src="images/ae.svg" width="89" height="88" alt="Adobe After Effects">
                 <p class="skills_signature">Adobe<br>After Effects</p>
                 <div>
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_empty.svg" alt="empty star" class="last_star">
                 </div>
             </div>
             <div class="skills_item2">
-                <img class="figma_image" src="./images/figma.svg" width="58" height="88" alt="Figma">
+                <img class="figma_image" src="images/figma.svg" width="58" height="88" alt="Figma">
                 <p class="skills_signature">Figma<br><br></p>
                 <div>
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_full.svg" alt="full star" class="stars">
-                    <img src="./images/star_empty.svg" alt="empty star" class="last_star">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_full.svg" alt="full star" class="stars">
+                    <img src="images/star_empty.svg" alt="empty star" class="last_star">
                 </div>
             </div>
         </section>
@@ -96,15 +96,15 @@
         <section class="portfolio">
             <h2 id="portfolio">Portfolio</h2>
             <div class="fashion-store">
-                <img class="portfolio_image" src="./images/woman.png" alt="Online fashion store - Homepage">
+                <img class="portfolio_image" src="images/woman.png" alt="Online fashion store - Homepage">
                 <p><a class="portfolio_links" href="#" target="_blank">Online fashion store -<br>Homepage</a></p>
             </div>
             <div class="reebok-store">
-                <img class="portfolio_image" src="./images/reebok.png" alt="Reebok Store - Concep">
+                <img class="portfolio_image" src="images/reebok.png" alt="Reebok Store - Concep">
                 <p><a class="portfolio_links" href="#" target="_blank">Reebok Store - Concept</a></p>
             </div>
             <div class="braun">
-                <img class="portfolio_image" src="./images/cam.png" alt="Braun Landing Page - Concept">
+                <img class="portfolio_image" src="images/cam.png" alt="Braun Landing Page - Concept">
                 <p><a class="portfolio_links" href="#" target="_blank">Braun Landing Page - Concept</a></p>
             </div>
         </section>
@@ -119,16 +119,16 @@
         <div class="links_box">
             <ul>
                 <li class="follow-links">
-                    <a href="#"><img src="./images/link.svg" alt="linkedin"></a>
+                    <a href="#"><img src="images/link.svg" alt="linkedin"></a>
                 </li>
                 <li class="follow-links">
-                    <a href="#"><img src="./images/insta.svg" alt="instagram"></a>
+                    <a href="#"><img src="images/insta.svg" alt="instagram"></a>
                 </li>
                 <li class="follow-links">
-                    <a href="#"><img src="./images/behance.svg" alt="behence"></a>
+                    <a href="#"><img src="images/behance.svg" alt="behence"></a>
                 </li>
                 <li class="follow-links">
-                    <a href="#"><img src="./images/surface.svg" alt="linkedin"></a>
+                    <a href="#"><img src="images/surface.svg" alt="linkedin"></a>
                 </li>
             </ul>
         </div>
