--- a/students/savchak_marharyta/08_css/index.html
+++ b/students/savchak_marharyta/08_css/index.html
@@ -13,7 +13,7 @@
         <div>
             <nav>
                 <ul>
-                    <li>Home</li>
+                    <li><b>Home</b></li>
                     <li>About me</li>
                     <li>Skills</li>
                     <li>Portfolio</li>
