--- a/students/motkaliuk_andrii/10_css_box_model/productly/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="input_place">
                 <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
-                <form action="">
+                <form action="" method="post">
                     <input class="input_space" type="text" id="phone-number" name="phone-number"
                         placeholder="Enter your phone Number"><br>
                     <input type="submit" value="Sign up Now">
