--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -30,12 +30,8 @@
                 </ul>
             </nav>
             <div class="sign-in-up">
-                <div class="sign-in">
-                    <a class="sign-in_button" href="#">Sign In</a>
-                </div>
-                <div class="sign-up">
-                    <a class="sign-up_button" href="#">Sign Up</a>
-                </div>
+                <a class="sign-in_button" href="#">Sign In</a>
+                <a class="sign-up_button" href="#">Sign Up</a>
             </div>
         </div>
     </header>
@@ -47,13 +43,12 @@
                     <h1 class="design_header">The Design Thinking superpowers</h1>
                     <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
                         The most intuitive way to imagine your next user experience.</p>
-
                     <div class="button_container">
                         <a class="get_started_button" href="#">Get started</a>
                     </div>
                 </div>
                 <div class="design_item2">
-                    <img src="./images/des_thinking.svg" alt="logo">
+                    <img src="./images/des_thinking.svg" alt="design thinking">
                 </div>
             </section>
         </div>
@@ -68,17 +63,17 @@
                         <p class="we-design_content">While most people enjoy casino gambling.</p>
                     </div>
                     <div class="we-design_item">
-                        <img src="images/path.svg" alt="click picture">
+                        <img src="images/path.svg" alt="path picture">
                         <h3 class="we-design_item_header">Design surveys</h3>
                         <p class="we-design_content">Sports betting, lottery and bingo<br> playing for the fun.</p>
                     </div>
                     <div class="we-design_item">
-                        <img src="images/like.svg" alt="click picture">
+                        <img src="images/like.svg" alt="like picture">
                         <h3 class="we-design_item_header">Preference tests</h3>
                         <p class="we-design_content">The Myspace page defines the<br> individual.</p>
                     </div>
                     <div class="we-design_item">
-                        <img src="images/time.svg" alt="click picture">
+                        <img src="images/time.svg" alt="time picture">
                         <h3 class="we-design_item_header">Five second tests</h3>
                         <p class="we-design_content">Personal choices and the overall<br> personality of the person.</p>
                     </div>
@@ -98,34 +93,29 @@
                 </div>
                 <div class="quick-links_block">
                     <h3 class="footer_headers">Quick Links</h3>
-                    <div class="quick-links">
-                        <ul>
-                            <li><a class="quick-links_item" href="#">About Us</a></li>
-                            <li><a class="quick-links_item" href="#">Blog</a></li>
-                            <li><a class="quick-links_item" href="#">Contacts</a></li>
-                            <li><a class="quick-links_item" href="#">FAQ</a></li>
-                        </ul>
-                    </div>
+                    <ul>
+                        <li><a class="quick-links_item" href="#">About Us</a></li>
+                        <li><a class="quick-links_item" href="#">Blog</a></li>
+                        <li><a class="quick-links_item" href="#">Contacts</a></li>
+                        <li><a class="quick-links_item" href="#">FAQ</a></li>
+                    </ul>
                 </div>
                 <div class="legal-stuff_block">
                     <h3 class="footer_headers">Legal Stuff</h3>
-                    <div class="legal-stuff">
-                        <ul>
-                            <li><a class="legal-stuff_item" href="#">Disclaimer</a></li>
-                            <li><a class="legal-stuff_item" href="#">Financing</a></li>
-                            <li><a class="legal-stuff_item" href="#">Privacy Policy</a></li>
-                            <li><a class="legal-stuff_item" href="#">Terms of Service</a></li>
-                        </ul>
-                    </div>
+                    <ul>
+                        <li><a class="legal-stuff_item" href="#">Disclaimer</a></li>
+                        <li><a class="legal-stuff_item" href="#">Financing</a></li>
+                        <li><a class="legal-stuff_item" href="#">Privacy Policy</a></li>
+                        <li><a class="legal-stuff_item" href="#">Terms of Service</a></li>
+                    </ul>
                 </div>
                 <div class="input_place">
                     <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
-                    <div class="input_space_box">
-                        <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
-                    </div>
-                    <div class="footer_button_box">
-                        <a class="footer_button" href="#">Sign up Now</a>
-                    </div>
+                    <form action="" method="post">
+                        <input class="input_space" type="text" id="phone-number" name="phone-number"
+                            placeholder="Enter your phone Number"><br>
+                        <input type="submit" value="Sign up Now">
+                    </form>
                 </div>
             </div>
         </div>
