--- a/students/hridina_anastasiia/11_flexbox/index.html
+++ b/students/hridina_anastasiia/11_flexbox/index.html
@@ -9,11 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: Montserrat
-        }
-    </style>
+
 </head>
 
 <body>
@@ -131,7 +127,7 @@
                 <input type="number" placeholder="Enter your phone number" />
             </div>
             <div class="input__button">
-                <a href="#" class="button5">Sing up Now</a>
+                <button class="button5" type="submit">Sign up Now</button>
             </div>
         </div>
     </footer>
